--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,12 @@
   </head>
   <body>
     <div class="container">
-      <h1>32182108 모바일시스템공학과 서동환</h1>
+      <h1>단국대학교 모바일시스템공학과 32182108 서동환</h1>
       <img
         src="pic/7021D91F-626C-4730-AFCA-2B5CEBF261CB_1_105_c.jpeg"
         alt="Profile Picture"
       />
+      <h2></h2>
     </div>
   </body>
 </html>
