added contents added pictures added pictures added pictures

--- a/index.html
+++ b/index.html
@@ -8,12 +8,41 @@
   </head>
   <body>
     <div class="container">
-      <h1>단국대학교 모바일시스템공학과 32182108 서동환</h1>
+      <h1>Web page for Self Introduction</h1>
       <img
+        class="profile"
         src="pic/7021D91F-626C-4730-AFCA-2B5CEBF261CB_1_105_c.jpeg"
         alt="Profile Picture"
       />
-      <h2></h2>
+      <br />
+      <h2>기본 정보</h2>
+      <p>• 나이 : 25</p>
+      <p>• 거주지 : 경기도 화성시 동탄</p>
+      <p>• 직업 : 대학생</p>
+      <br />
+      <h2>학력</h2>
+      <p>• 학교 : 단국대학교</p>
+      <p>• 학과 : 모바일시스템공학과</p>
+      <p>• 입학 연도 : 2018</p>
+      <p>• 졸업(예정) 연도 : 2024</p>
+      <br />
+      <h2>진로</h2>
+      <p>• 관심 분야 : 임베디드 개발</p>
+      <p>• 희망 진로 : 펌웨어 개발자</p>
+      <br />
+      <h2>취미</h2>
+      <p>• 운동 : 달리기</p>
+      <img class="running_img" src="pic/IMG_0427.PNG" />
+      <br />
+      <br />
+      <br />
+      <h2>SNS</h2>
+      <div class="insta_container">
+        <a href="https://www.instagram.com/sn__mac/" target="_blank">
+          <img src="pic/icons8-instagram-500.png"
+        /></a>
+        <span class="insta_text">Instagram</span>
+      </div>
     </div>
   </body>
 </html>
