--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <p>• 관심 분야 : 임베디드 개발</p>
       <p>• 희망 진로 : 펌웨어 개발자</p>
       <br />
-      <h2>취미</h2>
-      <p>• 운동 : 달리기</p>
+      <h2>기타 특이사항</h2>
+      <p>• 취미 : 달리기</p>
       <img class="running_img" src="pic/IMG_0427.PNG" />
       <br />
       <br />
