--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
       <h2>기타 특이사항</h2>
       <p>• 취미 : 달리기</p>
       <img class="running_img" src="pic/IMG_0427.PNG" />
+      <p>• 반려동물</p>
+      <img class="pet_img" src="pic/1050.jpeg" />
+      <iframe
+        class="pet_video"
+        width="600"
+        height="338"
+        src="https://www.youtube.com/embed/9lOwUvCQLps"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+
       <br />
       <br />
       <br />
