--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   <body>
     <div class="container">
       <h1>Web page for Self Introduction</h1>
-      <img
-        class="profile"
-        src="pic/7021D91F-626C-4730-AFCA-2B5CEBF261CB_1_105_c.jpeg"
-        alt="Profile Picture"
-      />
+      <img class="profile" src="pic/profile.jpeg" alt="Profile Picture" />
       <br />
       <h2>기본 정보</h2>
       <p>• 나이 : 25</p>
@@ -31,13 +27,13 @@
       <p>• 희망 진로 : 펌웨어 개발자</p>
       <br />
       <h2>기타 특이사항</h2>
-      <p>• 취미 : 달리기</p>
+      <p>• 취미 : 달리기, 자전거</p>
       <div class="running_container">
-        <img src="pic/IMG_0427.PNG" />
+        <img src="pic/running.PNG" />
       </div>
       <p>• 반려동물</p>
       <div class="pet_container">
-        <img src="pic/1050.jpeg" />
+        <img src="pic/pet.jpeg" />
         <iframe
           width="600"
           height="338"
@@ -54,7 +50,7 @@
       <h2>SNS</h2>
       <div class="insta_container">
         <a href="https://www.instagram.com/sn__mac/" target="_blank">
-          <img src="pic/icons8-instagram-500.png"
+          <img src="pic/insta_logo.png"
         /></a>
         <span class="insta_text">Instagram</span>
       </div>
