--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
       <br />
       <h2>기타 특이사항</h2>
       <p>• 취미 : 달리기, 자전거</p>
-      <div class="running_container">
+      <div class="hobby_container">
         <img src="pic/running.PNG" />
+        <img src="pic/bicycle_1.jpg" />
+        <img src="pic/bicycle_2.jpg" />
       </div>
       <p>• 반려동물</p>
       <div class="pet_container">
