updated logo image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h2>SNS</h2>
       <div class="insta_container">
         <a href="https://www.instagram.com/sn__mac/" target="_blank">
-          <img src="pic/insta_logo.png"
+          <img src="pic/instagram_logo.png"
         /></a>
         <span class="insta_text">Instagram</span>
       </div>
